--- a/anime-detail.html
+++ b/anime-detail.html
@@ -165,7 +165,7 @@
 <body>
   <!-- Vídeo de fondo: tiene poster para que el navegador muestre la imagen hasta que haya primer frame -->
   <video id="bg-video" poster="galaxia-poster.jpg" autoplay muted loop playsinline>
-    <source src="https://www.dropbox.com/scl/fi/ex4qhvjtx54blr92d0saj/yyyy.mp4?rlkey=ip9vhlhlsl1ye7el3onl1u2ug&st=f8o90thc&raw=1" type="video/mp4">
+    <source src="https://www.dropbox.com/scl/fi/g7jmt1inbplxbwgh5q19l/yyyy.mp4?rlkey=lilw3dbar3xtovu8d37uxfo1s&st=7l0juzp5&raw=1" type="video/mp4">
   </video>
   <!-- overlay con la imagen/poster: se ocultará cuando el video dispare 'playing' -->
   <div id="overlay"></div>
@@ -222,7 +222,7 @@
   <audio id="uzumaki-ost" loop><source src="https://www.dropbox.com/scl/fi/tq7x8abap01qs1jex5aqy/Uzumaki-Opening-theme-Song-Intro-Anime.mp3?rlkey=qjauevwei7uihfnvx8etdvl7f&st=iewsreh2&raw=1" type="audio/mpeg"></audio>
   <audio id="tondemo-ost" loop><source src="https://www.dropbox.com/scl/fi/z3nw0hlps4tjwqipc1axy/Tondemo-Skill-de-Isekai-Hourou-Meshi-Opening-Full-Luxury-Spoon-Van-de-Shop-Sub-Espa-ol-Latino.mp3?rlkey=vhlgiylxa9ej2tgy4q9wtf8vl&st=u7j9u5q1&raw=1" type="audio/mpeg"></audio>
   <audio id="muneca-ost" loop><source src="https://www.dropbox.com/scl/fi/arzidxum6qqn27x7o6mmb/MV-TV-anime-My-Dress-Up-Darling-Season-2-Opening-Theme.mp3?rlkey=cavkywi87u1cnli730obp0dee&st=p3y6xvxt&raw=1" type="audio/mpeg"></audio>
-  <audio id="hazbin-ost" loop><source src="https://www.dropbox.com/scl/fi/04uebc7tvm3l3zejmt9jo/m1.mp3?rlkey=9yq3w6i0hqp5qbc2ujs28ab9p&st=2wugb0mz&raw=1" type="audio/mpeg"></audio>
+  <audio id="hazbin-ost" loop><source src="https://www.dropbox.com/scl/fi/ks3485o7w7dz8qghout2a/Angel-Dust-Poison-Hazbin-Hotel.mp3?rlkey=aq6eeibryia64ufx201f1dymf&st=fd37l1sk&raw=1" type="audio/mpeg"></audio>
   <audio id="shadow1-ost" loop><source src="https://www.dropbox.com/scl/fi/bab2zrahhc8lqrvf0xz4m/The-Eminence-in-Shadow-Season-2-OP-Full-grayscale-dominator-Sub-Espa-ol-Romaji-AMV.mp3?rlkey=g0kdyoiamb5aric7kzrufetuk&st=bofhh779&raw=1" type="audio/mpeg"></audio>
   <audio id="shadow2-ost" loop><source src="https://www.dropbox.com/scl/fi/wlfy3btt81oioawt6x3qo/The-Eminence-in-Shadow-Moonlight-Sonata-1st-Movement-Beethoven.mp3?rlkey=vcrmpxnlqnjjk6bt2nnqfpfif&st=u9m1yzem&raw=1" type="audio/mpeg"></audio>
   <audio id="spy-ost" loop><source src="https://www.dropbox.com/scl/fi/kuqz0dl06vn8j4fnlb5hm/Spy-x-Family-Ed.-2-Full-Shikisai-by-yama-Sub-Espa-ol.mp3?rlkey=s4yvn7z2543mwco8w24eiuia3&st=n7grw5v2&raw=1" type="audio/mpeg"></audio>
@@ -1961,7 +1961,28 @@
             num: 3,
             cover: "https://www.dropbox.com/scl/fi/2zghbbzs6lpi2lt6sf7ui/fumetsu3.jpg?rlkey=l8yfxc0yk2u13ie8wemgcuoal&st=t0qoyl96&raw=1",
             eps: [
-              { title: "To Your Eternity T3 Cap 1"},
+              { title: "To Your Eternity T2 Cap 1"},
+              { title: "To Your Eternity T2 Cap 2"},
+              { title: "To Your Eternity T2 Cap 3"},
+              { title: "To Your Eternity T2 Cap 4"},
+              { title: "To Your Eternity T2 Cap 5"},
+              { title: "To Your Eternity T2 Cap 6"},
+              { title: "To Your Eternity T2 Cap 7"},
+              { title: "To Your Eternity T2 Cap 8"},
+              { title: "To Your Eternity T2 Cap 9"},
+              { title: "To Your Eternity T2 Cap 10"},
+              { title: "To Your Eternity T2 Cap 11"},
+              { title: "To Your Eternity T2 Cap 12"},
+              { title: "To Your Eternity T2 Cap 13"},
+              { title: "To Your Eternity T2 Cap 14"},
+              { title: "To Your Eternity T2 Cap 15"},
+              { title: "To Your Eternity T2 Cap 16"},
+              { title: "To Your Eternity T2 Cap 17"},
+              { title: "To Your Eternity T2 Cap 18"},
+              { title: "To Your Eternity T2 Cap 19"},
+              { title: "To Your Eternity T2 Cap 20"},
+              { title: "To Your Eternity T2 Cap 21"},
+              { title: "To Your Eternity T2 Cap 22"},
             ]
           }
         ]
