--- a/video-player.html
+++ b/video-player.html
@@ -1366,6 +1366,15 @@
           "18": { link:'https://www.dropbox.com/scl/fi/fkvyramh4d7emv3f0lbwy/To-Your-Eternity-T2-Cap-18.mp4?rlkey=pg99tlfrv9wdvd723u4dx5dcb&st=x665d4hw&raw=1', title:'To Your Eternity T2 Cap 18' },
           "19": { link:'https://www.dropbox.com/scl/fi/gb0qkyojsd4u620lxbs7g/To-Your-Eternity-T2-Cap-19.mp4?rlkey=86sr1znbcnhj9f3k3t92x2bjw&st=7zl7dm82&raw=1', title:'To Your Eternity T2 Cap 19' },
           "20": { link:'https://www.dropbox.com/scl/fi/70zh60alj64ti9s3bvkhp/To-Your-Eternity-T2-Cap-20.mp4?rlkey=cm1i87kos73ujc1qdb1fewpo4&st=ms980t4l&raw=1', title:'To Your Eternity T2 Cap 20' },
+        },
+        "3": {
+          "1": { link:'https://www.dropbox.com/scl/fi/msyejhji42qew8ljtpvc4/To-Your-Eternity-T3-Cap-1.mp4?rlkey=3woe5vjv3uwpoyfvzatc2ea3u&st=cpfmbrs4&raw=1', link2: 'https://drive.google.com/file/d/18AwyADyQSi-qhOVraxWq0AU8FZy7Wvvh/preview', title:'To Your Eternity T3 Cap 1' },
+          "2": { link:'https://www.dropbox.com/scl/fi/bui6z3bj7tntm4a9eg9ko/To-Your-Eternity-T3-Cap-2.mp4?rlkey=hpze3de206qhpoj9xuxsksvyq&st=kqzp1ras&raw=1', link2: 'https://drive.google.com/file/d/1BqRTuMxFr0O1n5P89m-9y5WPf-m1_Q5h/preview', title:'To Your Eternity T3 Cap 2' },
+          "3": { link:'https://www.dropbox.com/scl/fi/c9td7s1e7ke0swzkju2t4/To-Your-Eternity-T3-Cap-3.mp4?rlkey=rga6zwnpk0df2ri79ypj9oqdx&st=dz584833&raw=1', link2: 'https://drive.google.com/file/d/1KPhrrKmmosQoDa7YGKkfo2IE5svCEb_T/preview', title:'To Your Eternity T3 Cap 3' },
+          "4": { link:'https://www.dropbox.com/scl/fi/fvrl248kkoblsr5ia0mi1/To-Your-Eternity-T3-Cap-4.mp4?rlkey=cctavu3is8kxdumszl6xjn96n&st=8r8lww2m&raw=1', link2: 'https://drive.google.com/file/d/1WBlwICrPjHZdPHH-ffDHjtI_VNEFgl_c/preview', title:'To Your Eternity T3 Cap 4' },
+          "5": { link:'https://www.dropbox.com/scl/fi/x6blta7o6lltqn0b5l089/To-Your-Eternity-T3-Cap-5.mp4?rlkey=61eeem47ca0dj03kmoo99hn08&st=ml9ukq6z&raw=1', link2: 'https://drive.google.com/file/d/1n8Ux4bsr2U7J16p_jPM15s92GC-bkNMp/preview', title:'To Your Eternity T3 Cap 5' },
+          "6": { link:'https://www.dropbox.com/scl/fi/mvvtwr07x3v320l9liokf/To-Your-Eternity-T3-Cap-6.mp4?rlkey=8j70j9zkr6y17fo8np4zo7uq9&st=4svr8f7q&raw=1', link2: 'https://drive.google.com/file/d/1yjdoLXayA4_QaiTSk9QLi3XqjuGvmlyJ/preview', title:'To Your Eternity T3 Cap 6' },
+          "7": { link:'https://www.dropbox.com/scl/fi/2it4ewslghx8vtsts6upa/To-Your-Eternity-T3-Cap-7.mp4?rlkey=h1l18k0blnvt6xexl0wgnbb7m&st=6u23g1rp&raw=1', link2: 'https://drive.google.com/file/d/1nkr_iF1tfOzOeT240jGZuC6k47UuhRkB/preview', title:'To Your Eternity T3 Cap 7' },
         }
       },
       "32": {
@@ -1463,30 +1472,30 @@
       },
       "36": {
         "1": {
-          "1": { link:'https://www.dropbox.com/scl/fi/6wo12n29k2mu4upwiqtma/Gachiakuta-T1-Cap-1.mp4?rlkey=zc92jz89xctiqjjyp71fwrn7e&st=xp3hpky9&raw=1', title:'Gachiakuta T1 Cap 1' },
-          "2": { link:'https://www.dropbox.com/scl/fi/15m8q0ld94ztl1ozb2swf/Gachiakuta-T1-Cap-2.mp4?rlkey=ac9engox0l1xqyqyr7z1fk1mm&st=qixvw84t&raw=1', title:'Gachiakuta T1 Cap 2' },
-          "3": { link:'https://www.dropbox.com/scl/fi/dpp7jo6e9vajiaipa6jo2/Gachiakuta-T1-Cap-3.mp4?rlkey=sgw4e7pz90udgz5b5qkby48he&st=20syr1sj&raw=1', title:'Gachiakuta T1 Cap 3' },
-          "4": { link:'https://www.dropbox.com/scl/fi/630k2zp5bzuopfyvrmc98/Gachiakuta-T1-Cap-4.mp4?rlkey=un99a7ermok37rgm9m0f29yz9&st=i0upit0r&raw=1', title:'Gachiakuta T1 Cap 4' },
-          "5": { link:'https://www.dropbox.com/scl/fi/rohqhs8ar7rzp9nvsx9c3/Gachiakuta-T1-Cap-5.mp4?rlkey=69p8b1veb86nemdcnwrbt0a1b&st=hokfraty&raw=1', title:'Gachiakuta T1 Cap 5' },
-          "6": { link:'https://www.dropbox.com/scl/fi/hbtbjagtfhu851b9up2rc/Gachiakuta-T1-Cap-6.mp4?rlkey=lexyk3o3o0xbvzb9gnini7qm0&st=p3gaigas&raw=1', title:'Gachiakuta T1 Cap 6' },
-          "7": { link:'https://www.dropbox.com/scl/fi/9i0lk0h3liqkpg2wsleyw/Gachiakuta-T1-Cap-7.mp4?rlkey=0rkjotlvdjyg23wsufocwjzax&st=5abdefoh&raw=1', title:'Gachiakuta T1 Cap 7' },
-          "8": { link:'https://www.dropbox.com/scl/fi/vyebwb6yg53h19chnl424/Gachiakuta-T1-Cap-8.mp4?rlkey=hp57dw614lrs93o778gsg7qlf&st=f7ruiwip&raw=1', title:'Gachiakuta T1 Cap 8' },
-          "9": { link:'https://www.dropbox.com/scl/fi/ckhn4jivktsw0fdciy70a/Gachiakuta-T1-Cap-9.mp4?rlkey=qu6dssauslu66slda8m8ul86x&st=udho2pgu&raw=1', title:'Gachiakuta T1 Cap 9' },
-          "10": { link:'https://www.dropbox.com/scl/fi/91keenqu12jqw6cfh9bfj/Gachiakuta-T1-Cap-10.mp4?rlkey=v9lekxt00096k0nf2dv736mpf&st=qy9wcyyv&raw=1', title:'Gachiakuta T1 Cap 10' },
-          "11": { link:'https://www.dropbox.com/scl/fi/7rwwa9o60kjt926c46pbl/Gachiakuta-T1-Cap-11.mp4?rlkey=a4sm3y8qncu9ta6qss26h6mr6&st=quzjnm7r&raw=1', title:'Gachiakuta T1 Cap 11' },
-          "12": { link:'https://www.dropbox.com/scl/fi/vp4weqxu3jkg4ad6y82oh/Gachiakuta-T1-Cap-12.mp4?rlkey=mwqkls4c79ub2khqs5xwpmhur&st=z4p1pt1w&raw=1', title:'Gachiakuta T1 Cap 12' },
-          "13": { link:'https://www.dropbox.com/scl/fi/ne414qzca7utlcr3qd7bf/Gachiakuta-T1-Cap-13.mp4?rlkey=jdxsvj9u1wg2xw103j3goeeen&st=sm953xed&raw=1', title:'Gachiakuta T1 Cap 11' },
-          "14": { link:'&raw=1', title:'Gachiakuta T1 Cap 12' },
-          "15": { link:'&raw=1', title:'Gachiakuta T1 Cap 11' },
-          "16": { link:'&raw=1', title:'Gachiakuta T1 Cap 12' },
-          "17": { link:'&raw=1', title:'Gachiakuta T1 Cap 11' },
-          "18": { link:'&raw=1', title:'Gachiakuta T1 Cap 12' },
-          "19": { link:'&raw=1', title:'Gachiakuta T1 Cap 11' },
-          "20": { link:'&raw=1', title:'Gachiakuta T1 Cap 12' },
-          "21": { link:'&raw=1', title:'Gachiakuta T1 Cap 11' },
-          "22": { link:'&raw=1', title:'Gachiakuta T1 Cap 12' },
-          "23": { link:'&raw=1', title:'Gachiakuta T1 Cap 11' },
-          "24": { link:'&raw=1', title:'Gachiakuta T1 Cap 12' },
+          "1": { link:'https://www.dropbox.com/scl/fi/6wo12n29k2mu4upwiqtma/Gachiakuta-T1-Cap-1.mp4?rlkey=zc92jz89xctiqjjyp71fwrn7e&st=xp3hpky9&raw=1', link2: 'https://drive.google.com/file/d/1SNtFgICD_YI1XdBw1B_XpdAwYitXU9NO/preview', title:'Gachiakuta T1 Cap 1' },
+          "2": { link:'https://www.dropbox.com/scl/fi/15m8q0ld94ztl1ozb2swf/Gachiakuta-T1-Cap-2.mp4?rlkey=ac9engox0l1xqyqyr7z1fk1mm&st=qixvw84t&raw=1', link2: 'https://drive.google.com/file/d/1R_mukYFl2Z0-tlNv8ap7yl9cFNFHWJRE/preview', title:'Gachiakuta T1 Cap 2' },
+          "3": { link:'https://www.dropbox.com/scl/fi/dpp7jo6e9vajiaipa6jo2/Gachiakuta-T1-Cap-3.mp4?rlkey=sgw4e7pz90udgz5b5qkby48he&st=20syr1sj&raw=1', link2: 'https://drive.google.com/file/d/1bDiQT11gZkOwQfXvgmtFdHsz-cooIwn_/preview', title:'Gachiakuta T1 Cap 3' },
+          "4": { link:'https://www.dropbox.com/scl/fi/630k2zp5bzuopfyvrmc98/Gachiakuta-T1-Cap-4.mp4?rlkey=un99a7ermok37rgm9m0f29yz9&st=i0upit0r&raw=1', link2: 'https://drive.google.com/file/d/1gSa9fjnHvnj-fo8MFRPFSMBqoR8vBU7L/preview', title:'Gachiakuta T1 Cap 4' },
+          "5": { link:'https://www.dropbox.com/scl/fi/rohqhs8ar7rzp9nvsx9c3/Gachiakuta-T1-Cap-5.mp4?rlkey=69p8b1veb86nemdcnwrbt0a1b&st=hokfraty&raw=1', link2: 'https://drive.google.com/file/d/1-vhWYeV2Xb7XCg-M8Cc8YVZ4UtMR_0Ah/preview', title:'Gachiakuta T1 Cap 5' },
+          "6": { link:'https://www.dropbox.com/scl/fi/hbtbjagtfhu851b9up2rc/Gachiakuta-T1-Cap-6.mp4?rlkey=lexyk3o3o0xbvzb9gnini7qm0&st=p3gaigas&raw=1', link2: 'https://drive.google.com/file/d/1xtkCjGIYlfAMF1TV5536p1Szg_59wJm4/preview', title:'Gachiakuta T1 Cap 6' },
+          "7": { link:'https://www.dropbox.com/scl/fi/9i0lk0h3liqkpg2wsleyw/Gachiakuta-T1-Cap-7.mp4?rlkey=0rkjotlvdjyg23wsufocwjzax&st=5abdefoh&raw=1', link2: 'https://drive.google.com/file/d/1VCLNalj4yi7bjGnWZf24vclVlEU5vcBo/preview', title:'Gachiakuta T1 Cap 7' },
+          "8": { link:'https://www.dropbox.com/scl/fi/vyebwb6yg53h19chnl424/Gachiakuta-T1-Cap-8.mp4?rlkey=hp57dw614lrs93o778gsg7qlf&st=f7ruiwip&raw=1', link2: 'https://drive.google.com/file/d/1khgzHi5WyhgmO4VXjFagJx9rYzMiUZvu/preview', title:'Gachiakuta T1 Cap 8' },
+          "9": { link:'https://www.dropbox.com/scl/fi/ckhn4jivktsw0fdciy70a/Gachiakuta-T1-Cap-9.mp4?rlkey=qu6dssauslu66slda8m8ul86x&st=udho2pgu&raw=1', link2: 'https://drive.google.com/file/d/17x3ZjRqMTqqv2Y42RQzxaPXMXvqecIJP/preview', title:'Gachiakuta T1 Cap 9' },
+          "10": { link:'https://www.dropbox.com/scl/fi/91keenqu12jqw6cfh9bfj/Gachiakuta-T1-Cap-10.mp4?rlkey=v9lekxt00096k0nf2dv736mpf&st=qy9wcyyv&raw=1', link2: 'https://drive.google.com/file/d/1RgchZmkaH2bkFYlz2syN7pSJItKV77no/preview', title:'Gachiakuta T1 Cap 10' },
+          "11": { link:'https://www.dropbox.com/scl/fi/7rwwa9o60kjt926c46pbl/Gachiakuta-T1-Cap-11.mp4?rlkey=a4sm3y8qncu9ta6qss26h6mr6&st=quzjnm7r&raw=1', link2: 'https://drive.google.com/file/d/1VlU-6FV-13xXhLgV0iI-hMiX0gcmz0UP/preview', title:'Gachiakuta T1 Cap 11' },
+          "12": { link:'https://www.dropbox.com/scl/fi/vp4weqxu3jkg4ad6y82oh/Gachiakuta-T1-Cap-12.mp4?rlkey=mwqkls4c79ub2khqs5xwpmhur&st=z4p1pt1w&raw=1', link2: 'https://drive.google.com/file/d/1lf-p6Qc728c8RHK1E_jdXqfcAqHA2h9Y/preview', title:'Gachiakuta T1 Cap 12' },
+          "13": { link:'https://www.dropbox.com/scl/fi/ne414qzca7utlcr3qd7bf/Gachiakuta-T1-Cap-13.mp4?rlkey=jdxsvj9u1wg2xw103j3goeeen&st=sm953xed&raw=1', link2: 'https://drive.google.com/file/d/1MUQh3GSu8IESIO9LgvgN_Q_zAs7mqfcr/preview', title:'Gachiakuta T1 Cap 13' },
+          "14": { link:'https://www.dropbox.com/scl/fi/ovzrqwtzo63nh3xbs5heg/Gachiakuta-T1-Cap-14.mp4?rlkey=grbhc4ca22kkyoiiyv4mgzgsm&st=zb0fjqno&raw=1', link2: 'https://drive.google.com/file/d/1mi1DOfh5WY4AODHWnTOODj6dHZz8PFrw/preview', title:'Gachiakuta T1 Cap 14' },
+          "15": { link:'https://www.dropbox.com/scl/fi/uqtiasi9049suz67w91mw/Gachiakuta-T1-Cap-15.mp4?rlkey=rt4cz9w4uzbkbm4sbomqg729f&st=j78mmd0n&raw=1', link2: 'https://drive.google.com/file/d/145mtOjsmppJbYSxGaekgzmd_tdFRdHAl/preview', title:'Gachiakuta T1 Cap 15' },
+          "16": { link:'&raw=1', title:'Gachiakuta T1 Cap 16' },
+          "17": { link:'&raw=1', title:'Gachiakuta T1 Cap 17' },
+          "18": { link:'&raw=1', title:'Gachiakuta T1 Cap 18' },
+          "19": { link:'&raw=1', title:'Gachiakuta T1 Cap 19' },
+          "20": { link:'&raw=1', title:'Gachiakuta T1 Cap 20' },
+          "21": { link:'&raw=1', title:'Gachiakuta T1 Cap 21' },
+          "22": { link:'&raw=1', title:'Gachiakuta T1 Cap 22' },
+          "23": { link:'&raw=1', title:'Gachiakuta T1 Cap 23' },
+          "24": { link:'&raw=1', title:'Gachiakuta T1 Cap 24' },
         }
       },
       "37": {
@@ -1892,6 +1901,7 @@
           "1": { link:'https://www.dropbox.com/scl/fi/5lrn9vci8uartilnyx1uy/Spy-Family-T3-Cap-1.mp4?rlkey=tk1rfcehc1zxl5cg9egps1wij&st=h7fax0hp&raw=1', link2: 'https://drive.google.com/file/d/1MdTaQKCtmuyirNYx_5WXJHKGw9FKgTXK/preview', title:'Spy × Family T3 Cap 1' },
           "2": { link:'https://www.dropbox.com/scl/fi/5i7p21ni7u1b0ci58lknt/Spy-Family-T3-Cap-2.mp4?rlkey=rmp72zlu9gjgygtrqcazmtvii&st=8zs1qtyj&raw=1', link2: 'https://drive.google.com/file/d/1nMBZYAKch3txGYa7ZR-E9PXH3HJGV7Qe/preview', title:'Spy × Family T3 Cap 2' },
           "3": { link:'https://www.dropbox.com/scl/fi/tsjz7bz2jqyqtqm3o88dc/Spy-Family-T3-Cap-3.mp4?rlkey=fy225l9ubtcex5bhfi8gat0qk&st=43tua16k&raw=1', link2: 'https://drive.google.com/file/d/1pItUIDJOzv-2gn7pElJqqVAIHcHD6ECS/preview', title:'Spy × Family T3 Cap 3' },
+          "3": { link:'https://www.dropbox.com/scl/fi/ssy2qf91agoemqiapwyhx/Spy-Family-T3-Cap-4.mp4?rlkey=mu0e8hzalf9k8cmdmuel3v2tw&st=8n1dtbv4&raw=1', link2: 'https://drive.google.com/file/d/1mfKA7Y-Hw8LB_u0LM6Vaaw04WUTsLzsJ/preview', title:'Spy × Family T3 Cap 4' },
         }
       },
       "50": {
@@ -2080,6 +2090,7 @@
       "51": {
         "1": {
           "1": { link:'https://www.dropbox.com/scl/fi/sr54vz6tfaj7oqum850da/My-Hero-Academia-T8-Cap-1.mp4?rlkey=pzm4ztsdrcsj8kesrox9zlugi&st=oq2p9m3y&raw=1', link2: 'https://drive.google.com/file/d/1C16zoogP1JPPZANScxJP0z67WTxZYgIq/preview', title:'My Hero Academia T8 Cap 1' },
+          "1": { link:'https://www.dropbox.com/scl/fi/bnebnja6hlins0uim6eqx/My-Hero-Academia-T8-Cap-2.mp4?rlkey=n092mfb3wrjrm6w4h6p111ty2&st=xfbcbml9&aw=1', link2: 'https://drive.google.com/file/d/15EYYksOimq9RBKI89LCdtqZ-CXWEFv3l/preview', title:'My Hero Academia T8 Cap 2' },
         }
       },
       "52": {
